syntax = "proto3";

import "google/protobuf/empty.proto";
package pb;

service Reptile {
  rpc Request (ClientRequest) returns (ClientResponse) {}
  rpc Log (google.protobuf.Empty) returns (stream ClientLog) {}
}

message ClientRequest {
  string operation = 1;
  string clientId = 2;
  uint32 requestNum = 3;
}

message ClientResponse {
  string response = 1;
  uint32 requestNum = 2;
  uint32 operationNum = 3;
}

message ClientLog {
  string log = 1;
  string clientId = 2;
}